--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,7 +1,13 @@
-.landingPageContainerOne {
+.main{
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+ 
+}
+
+.landingPageContainerOne {
+  padding: 20px 20px 20px 0px;
+
 }
 
 .headerText {
@@ -13,6 +19,8 @@
   font-family: var(--special-font);
   color: var(--HeaderTextColor);
   font-size: 54px;
+  display: flex;
+  justify-content: center;
   margin: unset;
 }
 
@@ -23,4 +31,53 @@
   font-size: 24px;
   color: var(--Accent);
   padding-top: 50px;
+}
+
+.imgCtaContent {
+  display: flex;
+  margin-top: 50px;
+  justify-content: end;
+  
+}
+
+.img {
+  margin-top: 70px;
+  position: absolute;
+}
+
+.cta {
+  font-family: var(--special-font);
+  color: var(--HeaderTextColor);
+  font-size: 22px;
+  margin-top: 50px;
+
+}
+.footerTextContent {
+  display: flex;
+  background-color: var(--Footer);
+  height: 100%;
+  padding: 20px;
+  font-family: var(--primary-font);
+}
+.footerTextContainer{
+  margin-top: 130px;
+  width: 100%;
+}
+.footerText{
+  margin-top: 10px;
+  color: var(--Accent);
+  font-size: 20px;
+  
+}
+
+.btnContainer{
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.homePBtn{
+
+  width: 200px;
+
 }
