--- a/src/styles/ShipmentDetails.module.css
+++ b/src/styles/ShipmentDetails.module.css
@@ -39,23 +39,34 @@
   display: flex;
   flex-flow: column;
   gap: 1rem;
-  
 }
-.formFieldLabelRow{
-    margin-bottom: 6px;
+.formFieldLabelRow {
+  margin-bottom: 6px;
 }
-.labelText{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 13px;
+.labelText {
+  font-family: "Times New Roman", Times, serif;
+  font-size: 13px;
 }
 .inputField {
   width: 310px;
   box-sizing: border-box;
   padding: 9px;
   border-radius: 7px;
-  border: 1px solid var(--Footer);
+  border: 1px solid var(--HeaderTextColor);
 }
 
 .shipDetailsBtn {
   width: 310px;
+}
+
+.link {
+  font-size: 13px;
+}
+
+.span {
+  margin-right: 5px;
+}
+.linkText {
+  text-decoration: none;
+  color: var(--Accent);
 }
