--- a/src/pages/sign-in/sign-in.module.css
+++ b/src/pages/sign-in/sign-in.module.css
@@ -47,3 +47,19 @@
       box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 0px 1px, rgba(0, 0, 0, 0.07) 0px 0px 1px 0px !important;
   }
   
+
+  .link {
+    display: flex;
+    justify-content: center;
+    font-size: 13px;
+    
+  }
+  
+  .span {
+    margin-right: 5px;
+  }
+  .linkText {
+    text-decoration: none;
+    color: var(--Accent);
+  }
+  
