--- a/src/styles/ExploreBooks.module.css
+++ b/src/styles/ExploreBooks.module.css
@@ -1,12 +1,17 @@
+.img {
+  width: 100%;
+  height: 100px;
+  position: relative;
+  margin-bottom: 25px;
+}
+/* .searchBar {
+  width: 100%;
+  box-sizing: border-box;
+  border-radius: 12px;
+  padding: 10px;
+  border: 1px solid var(--HeaderTextColor);
+} */
 
-.img{
-    width: 100%;
-    height: 100px;
-    position: relative;
+.wrapperBookTextContent{
+   
 }
-/* .serchBar{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
- */
