--- a/src/components/BookLayout.module.css
+++ b/src/components/BookLayout.module.css
@@ -1,43 +1,41 @@
 .parentWrapper {
   margin-top: var(--spacing-xxl);
+  width: calc((100% - var(--spacing-md) * 2) / 3);
+  display: flex;
+  flex-direction: column;
+}
+
+.imgWrapper {
+  position: relative;
+  width: 100%;
+  height: 169px;
+  display: flex;
 }
 
 .wrapperBookTextContent {
   margin-top: 5px;
 }
 
-.img {
-  position: relative;
-  width: 113px;
-  height: 169px;
+.heartAndUserNameWrapper {
   display: flex;
-}
-
-.userName {
+  justify-content: space-between;
   color: var(--HeaderTextColor);
-  font-size: 13px;
+  font-size: 12px;
   margin-bottom: 3px;
 }
 
 .price {
-  font-size: 13px;
+  font-size: 12px;
   font-family: var(--price-font);
   margin-bottom: 2px;
 }
 
 .bookTitle {
-  font-size: 13px;
+  font-size: 12px;
   color: var(--Accsent);
   font-family: var(--special-font);
 }
 
-.heartCard{
-    display: flex;
-    
-}
-.heartAndUserNameWrapper {
-    display: flex;
-    justify-content: end;
-    position: absolute;
-    left: 110px;
+.heartCard {
+  display: flex;
 }
