Added nav and also scroll for content

--- a/src/components/AppShell.module.css
+++ b/src/components/AppShell.module.css
@@ -7,9 +7,12 @@
 } 
 .headerWrapper{
     padding: var(--spacing-md)
+
 }
 .mainWrapper{
-    padding: var(--spacing-md)
+    padding: var(--spacing-md);
+    height: 100%;
+    overflow-y: scroll;
 }
 .navWrapper{
 
