--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,7 @@
   --Footer: #AAB8B3;
   --Button: #3A4B49;
   --Inputfild: #fafffb;
+  --Line: #0E2D26;
   --spacing-base: 5px;
   --spacing-xs: calc(var(--spacing-base) * 1);
   --spacing-sm: calc(var(--spacing-base) * 2);
