--- a/src/styles/ExploreBooks.module.css
+++ b/src/styles/ExploreBooks.module.css
@@ -1,8 +1,11 @@
 .img {
   width: 100%;
-  height: 100px;
+  height: 150px;
+  object-fit: cover;
   position: relative;
-  margin-bottom: 25px;
+  margin-bottom: 40px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  
 }
 /* .searchBar {
   width: 100%;
@@ -16,4 +19,5 @@
    display: flex;
    gap: var(--spacing-md);
    flex-wrap: wrap;
+   
 }
