--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,7 +13,11 @@
   --spacing-md: calc(var(--spacing-base) * 3);
   --spacing-lg: calc(var(--spacing-base) * 4);
   --spacing-xl: calc(var(--spacing-base) * 5);
+  --spacing-m: calc(var(--spacing-base) * 8);
   --spacing-xxl: calc(var(--spacing-base) * 10);
+
+
+  
 }
 
 body {
