--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -27,3 +27,10 @@
   gap: 5px;
 }
 
+.line{
+  background-color: var(--Line);
+  width: 100%;
+  height: 1px;
+  opacity: 34%;
+  margin-bottom: 10px;
+}
