--- a/src/pages/book-details/_components/UserInfoBookDetails.module.css
+++ b/src/pages/book-details/_components/UserInfoBookDetails.module.css
@@ -24,7 +24,7 @@
   color: var(--HeaderTextColor);
   font-family: var(--special-font);
   font-size: 19px;
-  margin-top: 10px;
+  margin-top: 12px;
 }
 
 .userDescription {
@@ -41,5 +41,14 @@
   margin-bottom: 5px;
 }
 .star {
-  margin-top: 15px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.line{
+  background-color: var(--Line);
+  width: 100%;
+  height: 1px;
+  opacity: 24%;
+  margin-bottom: 10px;
 }
