--- a/src/pages/sign-in/sign-in.module.css
+++ b/src/pages/sign-in/sign-in.module.css
@@ -1,65 +1,62 @@
 .formButtonPrimary {
-    width: 100%;
-    height: 52px;
-    border-radius: 12px;
-    border: 0;
-    margin-top: 50px;
-    color: var(--Primary);
-    background-color: var(--HeaderTextColor);
-    font-family: var(--btn-font);
-    font-size: 16px;
-    font-family: var(--btn-font);
-    color: var(--Primary);
-    box-shadow: none;
-  }
-  .buttonArrowIcon {
-    display: none;
-  }
-  .headerTitle {
-    text-align: left;
-    line-height: 60px;
-    font-size: 64px;
-    font-family: var(--primary-font);
-    color: var(--HeaderTextColor);
-    font-weight: 400;
-  }
-  .rootBox {
-    background-color: var(--Primary);
-    width: 100vw;
-  }
-  .cardBox {
-    box-shadow: none;
-    width: 100vw;
-    max-width: none;
-  }
-  .card {
-    box-shadow: none;
-    width: 100vw;
-  }
-  
-  .footer {
-    background: none;
-  }
-  
-  .formFieldInput {
-      width: 100%;
-      padding: 17px;
-      box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 0px 1px, rgba(0, 0, 0, 0.07) 0px 0px 1px 0px !important;
-  }
-  
+  width: 100%;
+  height: 52px;
+  border-radius: 12px;
+  border: 0;
+  margin-top: 50px;
+  color: var(--Primary);
+  background-color: var(--HeaderTextColor);
+  font-family: var(--btn-font);
+  font-size: 16px;
+  font-family: var(--btn-font);
+  color: var(--Primary);
+  box-shadow: none;
+}
+.buttonArrowIcon {
+  display: none;
+}
+.headerTitle {
+  text-align: left;
+  line-height: 60px;
+  font-size: 64px;
+  font-family: var(--primary-font);
+  color: var(--HeaderTextColor);
+  font-weight: 400;
+}
 
-  .link {
-    display: flex;
-    justify-content: center;
-    font-size: 13px;
-    
-  }
-  
-  .span {
-    margin-right: 5px;
-  }
-  .linkText {
-    text-decoration: none;
-    color: var(--Accent);
-  }
-  
+.cardBox {
+  box-shadow: none;
+  width: 100%;
+  max-width: none;
+}
+.card {
+  box-shadow: none;
+  width: 100vw;
+  padding: 32px 40px 32px 40px;
+}
+
+.footer {
+  background: none;
+}
+
+.formFieldInput {
+  width: 100%;
+  border-radius: 4px;
+  padding: 10px;
+  border: 1px solid var(--Footer);
+  color: var(--HeaderTextColor);
+}
+
+.link {
+  display: flex;
+  justify-content: center;
+  font-size: 13px;
+}
+
+.span {
+  margin-right: 5px;
+}
+.linkText {
+  text-decoration: none;
+  color: var(--Accent);
+}
