--- a/src/pages/sign-up/sign-up.module.css
+++ b/src/pages/sign-up/sign-up.module.css
@@ -35,6 +35,7 @@
 .card {
   box-shadow: none;
   width: 100vw;
+  padding: 32px 40px 32px 40px;
 }
 
 .footer {
@@ -42,9 +43,11 @@
 }
 
 .formFieldInput {
-    width: 100%;
-    padding: 17px;
-    box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 0px 1px, rgba(0, 0, 0, 0.07) 0px 0px 1px 0px !important;
+  width: 100%;
+  border-radius: 4px;
+  padding: 10px;
+  border: 1px solid var(--Footer);
+  color: var(--HeaderTextColor);
 }
 
 
@@ -52,6 +55,7 @@
   display: flex;
   justify-content: center;
   font-size: 13px;
+  color: var( );
 }
 
 .span {
