--- a/src/styles/ExploreBooks.module.css
+++ b/src/styles/ExploreBooks.module.css
@@ -15,3 +15,10 @@
    flex-wrap: wrap;
    
 } 
+
+.searchInput{
+  border-radius: 4px;
+  padding: 10px;
+  border: 1px solid var(--Footer) !important;
+  color: var(--HeaderTextColor);
+}
