--- a/src/components/SettingsProfile.module.css
+++ b/src/components/SettingsProfile.module.css
@@ -1,8 +1,8 @@
 
 .imageWrapper {
     position: relative;
-    width: 140px;
-    height: 140px;
+    width: 90px;
+    height: 90px;
     overflow: hidden;
     border-radius: 50%;
   }
@@ -11,16 +11,18 @@
   }
   
   .userName {
-    font-size: 18px;
-    margin-top: 5px;
+    font-size: 16px;
+    margin-top: 39px;
     color: var(--HeaderTextColor);
+    text-decoration: underline;
   }
 
   .layout {
     display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 5px;
+    justify-content: flex-start;
+    flex-direction: row;
+    gap: 9px;
     margin-top: 20px;
     margin-bottom: 40px;
   }
+
