--- a/src/components/BookLayout.module.css
+++ b/src/components/BookLayout.module.css
@@ -21,21 +21,31 @@
   justify-content: space-between;
   color: var(--HeaderTextColor);
   font-size: 12px;
-  margin-bottom: 3px;
+  margin-top: 5px;
 }
 
 .price {
-  font-size: 12px;
+  font-size: 14px;
   font-family: var(--price-font);
   margin-bottom: 2px;
 }
 
 .bookTitle {
-  font-size: 12px;
-  color: var(--Accsent);
+  font-size: 14px;
   font-family: var(--special-font);
 }
 
 .heartCard {
   display: flex;
+}
+
+.cartWrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5px;
+}
+
+.link{
+  text-decoration: underline;
+  color: var(--HeaderTextColor);
 }
