--- a/src/styles/ExploreBooks.module.css
+++ b/src/styles/ExploreBooks.module.css
@@ -5,7 +5,7 @@
   position: relative;
   margin-bottom: 40px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  
+  opacity: 90%;
 }
 
 
