did onboarding and validation

--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -17,6 +17,9 @@
   color: var(--HeaderTextColor);
   font-family: var(--special-font);
   font-size: 15px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+ 
 }
 
 .navbtn {
