--- a/src/styles/ShipmentDetails.module.css
+++ b/src/styles/ShipmentDetails.module.css
@@ -72,3 +72,13 @@
   text-decoration: none;
   color: var(--Accent);
 }
+.errorWrapper{
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.message{
+  color: red;
+  font-size: 20px;
+}
