--- a/src/pages/book-details/_components/UserInfoBookDetails.module.css
+++ b/src/pages/book-details/_components/UserInfoBookDetails.module.css
@@ -9,6 +9,7 @@
   height: 115px;
   overflow: hidden;
   border-radius: 50%;
+  border: 1px solid var(--HeaderTextColor)
 }
 .profileImg {
   position: absolute;
